// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopyWork > renders snapshot for edition > CopyWork - edition 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 rounded-2xl bg-(--color-background-alt) p-4 lg:p-7 css-1gtchvp-MuiPaper-root"
    style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="flex flex-col gap-5"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 max-w-[90%] css-16unqe0-MuiTypography-root"
      >
        new edition
      </h1>
    </div>
  </div>
  <div
    data-testid="create-work-copy"
  />
</div>
`;

exports[`CopyWork > renders snapshot for translation > CopyWork - translation 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 rounded-2xl bg-(--color-background-alt) p-4 lg:p-7 css-1gtchvp-MuiPaper-root"
    style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="flex flex-col gap-5"
    >
      <h1
        class="MuiTypography-root MuiTypography-h1 max-w-[90%] css-16unqe0-MuiTypography-root"
      >
        new translation
      </h1>
    </div>
  </div>
  <div
    data-testid="create-work-copy"
  />
</div>
`;
